<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="com.weronika.coffeehouse.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".view.LoginActivity">

        <include
            android:layout_marginTop="40dp"
            layout="@layout/logo_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/email_edit_text"
            android:maxHeight="40dp"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@{user.userEmail()}"
            android:hint="@string/email"
            android:textColor="@color/dark_brown"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_light"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text_background"
            android:gravity="start|center"/>

        <EditText
            android:id="@+id/password_edit_text"
            android:maxHeight="40dp"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password"
            android:text="@{user.userPassword()}"
            android:textColor="@color/dark_brown"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_light"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text_background"
            android:gravity="start|center"/>

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/log_in"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/light_brown"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:backgroundTint="@null"
            android:background="@drawable/button_background"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/green"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:gravity="start"
            android:maxEms="30"
            android:text="@string/create_account"/>

    </LinearLayout>

</layout>
